redirect from vercel to domain

--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,12 @@
         }
       ]
     }
+  ],
+  "redirects": [
+    {
+      "source": "/:path*",
+      "destination": "https://www.lacasadegrei.by",
+      "permanent": true
+    }
   ]
 }
